--- a/StatTrackerPlugin/StatTrackerPlugin.csproj
+++ b/StatTrackerPlugin/StatTrackerPlugin.csproj
@@ -74,7 +74,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Plugin.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
